vendor/async-trait-0.1.50/tests/ui/bare-trait-object.rs
#![deny(bare_trait_objects)]

use async_trait::async_trait;

#[async_trait]
trait Trait {
    async fn f(&self);
}

#[async_trait]
impl Trait for Send + Sync {
    async fn f(&self) {}
}

fn main() {}
